--- a/addons/csi-aws-ebs/aws-csi.yaml
+++ b/addons/csi-aws-ebs/aws-csi.yaml
@@ -8,8 +8,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.51.0
-    app.kubernetes.io/version: "1.51.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.53.0
+    app.kubernetes.io/version: "1.53.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 spec:
@@ -29,8 +29,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.51.0
-    app.kubernetes.io/version: "1.51.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.53.0
+    app.kubernetes.io/version: "1.53.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 automountServiceAccountToken: true
@@ -44,8 +44,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.51.0
-    app.kubernetes.io/version: "1.51.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.53.0
+    app.kubernetes.io/version: "1.53.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 automountServiceAccountToken: true
@@ -58,8 +58,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.51.0
-    app.kubernetes.io/version: "1.51.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.53.0
+    app.kubernetes.io/version: "1.53.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 # Do not modify the rules below manually, see `make update-sidecar-dependencies`
@@ -87,17 +87,20 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.51.0
-    app.kubernetes.io/version: "1.51.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.53.0
+    app.kubernetes.io/version: "1.53.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 rules:
-  - apiGroups: [""]
-    resources: ["nodes"]
-    verbs: ["get", "patch", "list", "watch"]
   - apiGroups: ["storage.k8s.io"]
     resources: ["volumeattachments"]
     verbs: ["get", "list", "watch"]
+  - apiGroups: [""]
+    resources: ["nodes"]
+    verbs: ["get"]
+  - apiGroups: [""]
+    resources: ["nodes"]
+    verbs: ["patch", "list", "watch"]
   - apiGroups: ["storage.k8s.io"]
     resources: ["csinodes"]
     verbs: ["get"]
@@ -110,8 +113,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.51.0
-    app.kubernetes.io/version: "1.51.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.53.0
+    app.kubernetes.io/version: "1.53.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 # Do not modify the rules below manually, see `make update-sidecar-dependencies`
@@ -167,8 +170,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.51.0
-    app.kubernetes.io/version: "1.51.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.53.0
+    app.kubernetes.io/version: "1.53.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 # Do not modify the rules below manually, see `make update-sidecar-dependencies`
@@ -208,8 +211,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.51.0
-    app.kubernetes.io/version: "1.51.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.53.0
+    app.kubernetes.io/version: "1.53.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 # Do not modify the rules below manually, see `make update-sidecar-dependencies`
@@ -253,8 +256,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.51.0
-    app.kubernetes.io/version: "1.51.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.53.0
+    app.kubernetes.io/version: "1.53.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -274,8 +277,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.51.0
-    app.kubernetes.io/version: "1.51.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.53.0
+    app.kubernetes.io/version: "1.53.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -295,8 +298,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.51.0
-    app.kubernetes.io/version: "1.51.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.53.0
+    app.kubernetes.io/version: "1.53.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -316,8 +319,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.51.0
-    app.kubernetes.io/version: "1.51.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.53.0
+    app.kubernetes.io/version: "1.53.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -337,8 +340,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.51.0
-    app.kubernetes.io/version: "1.51.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.53.0
+    app.kubernetes.io/version: "1.53.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -359,8 +362,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.51.0
-    app.kubernetes.io/version: "1.51.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.53.0
+    app.kubernetes.io/version: "1.53.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 rules:
@@ -377,8 +380,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.51.0
-    app.kubernetes.io/version: "1.51.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.53.0
+    app.kubernetes.io/version: "1.53.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -399,8 +402,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.51.0
-    app.kubernetes.io/version: "1.51.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.53.0
+    app.kubernetes.io/version: "1.53.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 spec:
@@ -420,8 +423,8 @@ spec:
         app: ebs-csi-node
         app.kubernetes.io/name: aws-ebs-csi-driver
         app.kubernetes.io/instance: aws-ebs-csi-driver
-        helm.sh/chart: aws-ebs-csi-driver-2.51.0
-        app.kubernetes.io/version: "1.51.0"
+        helm.sh/chart: aws-ebs-csi-driver-2.53.0
+        app.kubernetes.io/version: "1.53.0"
         app.kubernetes.io/component: csi-driver
         app.kubernetes.io/managed-by: Helm
     spec:
@@ -601,8 +604,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.51.0
-    app.kubernetes.io/version: "1.51.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.53.0
+    app.kubernetes.io/version: "1.53.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 spec:
@@ -623,8 +626,8 @@ spec:
         app: ebs-csi-controller
         app.kubernetes.io/name: aws-ebs-csi-driver
         app.kubernetes.io/instance: aws-ebs-csi-driver
-        helm.sh/chart: aws-ebs-csi-driver-2.51.0
-        app.kubernetes.io/version: "1.51.0"
+        helm.sh/chart: aws-ebs-csi-driver-2.53.0
+        app.kubernetes.io/version: "1.53.0"
         app.kubernetes.io/component: csi-driver
         app.kubernetes.io/managed-by: Helm
     spec:
@@ -898,6 +901,7 @@ spec:
         - name: socket-dir
           emptyDir: {}
 ---
+{{ $kubernetesVersion := semver .Config.Versions.Kubernetes }}
 # Source: aws-ebs-csi-driver/templates/csidriver.yaml
 apiVersion: storage.k8s.io/v1
 kind: CSIDriver
@@ -906,11 +910,14 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.51.0
-    app.kubernetes.io/version: "1.51.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.53.0
+    app.kubernetes.io/version: "1.53.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 spec:
   attachRequired: true
   podInfoOnMount: false
+  {{ if ge $kubernetesVersion.Minor 33 }}
+  nodeAllocatableUpdatePeriodSeconds: 10
+  {{ end }}
   fsGroupPolicy: File
