Update Hetzner CCM to replace polling with watch-based route reconciliation
Signed-off-by: Artiom Diomin <artiom@kubermatic.com>

--- a/addons/ccm-hetzner/ccm-hetzner.yaml
+++ b/addons/ccm-hetzner/ccm-hetzner.yaml
@@ -5,13 +5,86 @@ metadata:
   namespace: kube-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: ClusterRole
 metadata:
   name: system:hcloud-cloud-controller-manager
+rules:
+  - apiGroups:
+      - ""
+    resources:
+      - configmaps
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - ""
+    resources:
+      - events
+    verbs:
+      - create
+      - patch
+      - update
+  - apiGroups:
+      - ""
+    resources:
+      - nodes
+    verbs:
+      - '*'
+  - apiGroups:
+      - ""
+    resources:
+      - nodes/status
+    verbs:
+      - patch
+  - apiGroups:
+      - ""
+    resources:
+      - services
+    verbs:
+      - list
+      - watch
+  - apiGroups:
+      - ""
+    resources:
+      - services/status
+    verbs:
+      - patch
+      - update
+  - apiGroups:
+      - ""
+    resources:
+      - serviceaccounts
+    verbs:
+      - create
+  - apiGroups:
+      - ""
+    resources:
+      - persistentvolumes
+    verbs:
+      - get
+      - list
+      - update
+      - watch
+  - apiGroups:
+      - coordination.k8s.io
+    resources:
+      - leases
+    verbs:
+      - create
+      - get
+      - list
+      - watch
+      - update
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: system:hcloud-cloud-controller-manager:restricted
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: cluster-admin
+  name: system:hcloud-cloud-controller-manager
 subjects:
   - kind: ServiceAccount
     name: hcloud-cloud-controller-manager
@@ -43,7 +116,7 @@ spec:
             - --allow-untagged-cloud
             - --cloud-provider=hcloud
             - --configure-cloud-routes=false
-            - --feature-gates=CloudControllerManagerWatchBasedRoutesReconciliation=false
+            - --feature-gates=CloudControllerManagerWatchBasedRoutesReconciliation=true
             - --route-reconciliation-period=30s
             - --webhook-secure-port=0
             - --leader-elect=false
