--- a/addons/operating-system-manager/deployment-controller.yaml
+++ b/addons/operating-system-manager/deployment-controller.yaml
@@ -98,7 +98,7 @@ spec:
           resources:
             limits:
               cpu: "2"
-              memory: 512Mi
+              memory: 2Gi
             requests:
               cpu: 50m
               memory: 128Mi
