Update memory limit to use parameter from OSM config
Signed-off-by: appiepollo14 <asjer94@live.com>

--- a/addons/operating-system-manager/deployment-controller.yaml
+++ b/addons/operating-system-manager/deployment-controller.yaml
@@ -98,7 +98,7 @@ spec:
           resources:
             limits:
               cpu: "2"
-              memory: 2Gi
+              memory: {{ default "512Mi" .Params.OSM_MEMORY_LIMIT }}
             requests:
               cpu: 50m
               memory: 128Mi
