Remove limits from machine-controller and operating-system-manager components
Signed-off-by: Artiom Diomin <artiom@kubermatic.com>

--- a/addons/machinecontroller/deployment-controller.yaml
+++ b/addons/machinecontroller/deployment-controller.yaml
@@ -81,3 +81,7 @@ spec:
               path: /healthz
               port: 8085
             periodSeconds: 5
+          resources:
+            requests:
+              cpu: 100m
+              memory: 128Mi
